fix: move root readme to dist folder

--- a/packages/vision/package.json
+++ b/packages/vision/package.json
@@ -35,8 +35,7 @@
     "build": "bun build.ts"
   },
   "files": [
-    "dist",
-    "README.md"
+    "dist"
   ],
   "publishConfig": {
     "access": "public"
