chore(vision): add quality github action

--- a/packages/vision/package.json
+++ b/packages/vision/package.json
@@ -29,6 +29,7 @@
   "license": "MIT",
   "scripts": {
     "test": "bun test --watch",
+    "test:ci": "bun test",
     "dev": "bun --hot testing/local.ts",
     "release": "bun --hot testing/release.ts",
     "fakeClient": "bun scripts/fakeClient.ts",
